--- a/css/styles.css
+++ b/css/styles.css
@@ -55,3 +55,10 @@ body {
   bottom: 0px;
   z-index: 1;
 }
+.modal .modal-header {
+  background: #512DA8;
+  color: floralwhite;
+}
+.modal .modal-body {
+  background: #D1C4E9;
+}
